<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@drawable/title_bg"
        android:gravity="left" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/gasgraph" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imageView2"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/textCurrentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editDistance"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <EditText
            android:id="@+id/editDistance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editPrice"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textCurrentDate"
            android:gravity="right"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editVolume"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editDistance"
            android:gravity="right"
            android:inputType="phone"
            android:text="@string/ZERO" />

        <EditText
            android:id="@+id/editVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinnerFuelType"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editPrice"
            android:gravity="right"
            android:inputType="phone"
            android:text="@string/ZERO" />

        <CheckBox
            android:id="@+id/checkBoxFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editVolume"
            android:checked="true"
            android:text="@string/full_yes" />

        <Spinner
            android:id="@+id/spinnerFuelType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/checkBoxFull"
            android:layout_toLeftOf="@+id/checkBoxFull"
            android:layout_toRightOf="@+id/textDistance"
            android:entries="@array/fuel_type"
            android:saveEnabled="true" />

        <CheckBox
            android:id="@+id/checkBoxBreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinnerFuelType"
            android:layout_below="@+id/spinnerFuelType"
            android:text="@string/add_startover" />

        <ImageView
            android:id="@+id/imageHelpDate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_above="@+id/imageHelpDistance"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpDate" />

        <ImageView
            android:id="@+id/imageHelpDistance"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/textDistanceLabel"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textCurrentDate"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpDistance" />

        <TextView
            android:id="@+id/textDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCurrentDate"
            android:layout_toRightOf="@+id/imageHelpDistance"
            android:text="@string/distance_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textDistanceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textDistance"
            android:layout_below="@+id/textDistance"
            android:text="@string/distance_unit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageHelpPrice"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/textPriceLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/editPrice"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpPrice" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editDistance"
            android:layout_toRightOf="@+id/imageHelpPrice"
            android:text="@string/price_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textPrice"
            android:layout_below="@+id/textPrice"
            android:text="@string/price_unit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageHelpVolume"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_above="@+id/imageHelpFull"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/editVolume"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpVolume" />

        <TextView
            android:id="@+id/textVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textPriceLabel"
            android:layout_alignTop="@+id/imageHelpVolume"
            android:text="@string/volume_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textVolumeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textVolume"
            android:layout_toRightOf="@+id/imageHelpVolume"
            android:text="@string/volume_unit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageHelpFull"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/checkBoxFull"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/spinnerFuelType"
            android:clickable="true"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpFull" />

        <TextView
            android:id="@+id/textFuelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinnerFuelType"
            android:layout_alignBottom="@+id/spinnerFuelType"
            android:layout_toRightOf="@+id/imageHelpFull"
            android:text="@string/fueltype_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageHelpRestart"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/checkBoxBreak"
            android:layout_alignTop="@+id/checkBoxBreak"
            android:layout_toLeftOf="@+id/textFuelLabel"
            android:onClick="showHelp"
            android:src="@drawable/ic_menu_help"
            android:tag="HelpRestart" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/checkBoxBreak"
            android:text="@string/add_cancel" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBoxBreak"
            android:layout_alignParentBottom="true"
            android:text="@string/add_save" />

        <TextView
            android:id="@+id/textDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textCurrentDate"
            android:layout_alignBottom="@+id/textCurrentDate"
            android:layout_alignLeft="@+id/textDistance"
            android:layout_toLeftOf="@+id/textCurrentDate"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</LinearLayout>